argocd/user/manifests/umbrella/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umbrella
  annotations:
    istio-injection: enabled
spec: {}
