argocd/user/manifests/umbrella/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: service-b-waypoint
  namespace: umbrella
  labels:
    istio.io/gateway-name: service-b-waypoint
spec:
  gatewayClassName: istio-mesh
  listeners:
    - name: http
      port: 8081
      protocol: HTTP
